Fix spacing for SignUp page
chore: fixed awkward CSS Spacing for SignUp page

--- a/frontend/users-auth/src/pages/pages_css/SignUp.css
+++ b/frontend/users-auth/src/pages/pages_css/SignUp.css
@@ -17,7 +17,7 @@
 
     width: 100%;
     min-height: 100vh; 
-    margin: 0 auto; 
+    margin: 0; 
 }
 
 /*Style for half side of the site  */
@@ -62,7 +62,9 @@
     border-radius: 10px;
     width: 600px;
     height: 800px;
-    padding: 9;
+    padding: 9px;
+    padding-top: 25px;
+    padding-bottom: 50px;
 }
 
 .input_container_signup{
@@ -71,7 +73,6 @@
     border-radius: 10px; 
     width: 75%; 
     height: 8%;
-    margin-bottom: 5px;
     font-size: 18px; 
     box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.2);
 }
@@ -82,7 +83,7 @@
     padding: 12px 20px; 
     border: none; 
     border-radius: 4px; 
-    margin-top: 10px;
+    margin-top: 0px;
     font-size: 18px;
     color: white;
     background-color: #3A5A40;
